Way too much CSS for a backend project

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,17 +11,46 @@ html {
 }
 
 body {
-    background-color: lightgrey;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #ebeff5;
+    color: #323333;
+    font-family: 'Raleway', sans-serif;
+    padding: 5.5em 0 5em 0;
+    position: relative;
 }
 
-.mainContainer {
-    display: flex;
-    flex-direction: column;  
+h1 {
+    font-weight: 400;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: #323333;
+}
+
+input {
+	padding: 0.7em;
+}
+
+.bolder {
+    font-weight: bolder;
+}
+
+.lighter {
+    font-weight: lighter;
 }
 
 .navbar {
+    position: fixed;
+    top: 0;
     font-size: 1.2em;
-    border: 1px solid black;
+    background-color: #FFF;
+    border-bottom: 1px solid #323333;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,8 +61,19 @@ body {
     padding: 0em 5em;
 }
 
-nav > h1 {
-    flex: 3;
+.logo {
+    flex: 3;  
+}
+
+.logo a {
+	padding: 0.6em 1em;
+    border-radius: 3px;
+    background-color: #323333;
+    color: #FFF; 
+}
+
+.logo a:visited {
+	color: white;
 }
 
 .navLinkContainer {
@@ -57,6 +99,7 @@ nav > h1 {
     padding: 0.7em;
     border-radius: 3px;
     margin-left: 1em;
+    cursor: pointer;
 }
 
 .upload {
@@ -66,3 +109,161 @@ nav > h1 {
 .navInteraction:hover {
     background-color: aquamarine;
 }
+
+.contentContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 6em 0;
+}
+
+.contentForm {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #FFF;
+	padding: 5em;
+	border: 1px solid #323333;
+	border-radius: 1.5em;
+}
+
+.contentForm input {
+	border: none;
+	border: 1px solid #323333; 
+	border-radius: 3px;
+	background-color: #FFF;
+	margin: 1em 0;
+}
+
+.contentForm .inputFile {
+	border: none;
+}
+
+.contentForm select {
+	padding: 0.5em;
+	margin-top: 0.7em;
+	border: none;
+	background-color: #FFF;
+	font-size: 14px;
+}
+
+.contentFormSubmit {
+	padding: 1em;
+	background-color: aquamarine;
+	cursor: pointer;
+}
+
+.contentFormSubmit:hover {
+	background-color: #FFF;
+}
+
+.image {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+.image h3 {
+	margin-bottom: 1em;
+}
+
+.imageDesc {
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	margin-top: 1em;
+	text-align: left;
+}
+
+.imageDesc .like:hover {
+	color: green;
+}
+
+.imageDesc .download {
+	background-color: #323333;
+	color: aquamarine;
+	padding: 1em;
+	border-radius: 3px;
+}
+
+.imagegrid {
+    width: 60%;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+img {
+    background-color: #ebeff5;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 3px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5em;
+    border-top: 1px solid #323333;
+}
+
+.footContainer {
+    text-align: center;
+    font-size: 12px;
+}
+
+.signupContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.signupContainer h1 {
+	margin-bottom: 1em;
+}
+
+.signupForm {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #323333;
+	padding: 5em;
+	border-radius: 1.5em;
+}
+
+.signupContainer input {
+	border: none;
+	margin: 0.4em;
+	width: 15em;
+	border-radius: 3px;
+}
+
+.signupSubmit {
+	color: #323333;
+	background-color: aquamarine;
+	cursor: pointer;
+}
+
+.signupSubmit:hover {
+	background-color: #FFF;
+}
+
+.signup-p {
+	margin-top: 2em;
+}
+
+.signupContainer a {
+	color: #FFF;
+}
+
+.signupContainer a:hover {
+	color: aquamarine;
+}
+
+
