--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -8,16 +8,19 @@
 	</head>
 	
 	<body>
-		<div>
-		<nav class="navbar">
-        <h1><a th:href="@{'/'}"> imgstr </a></h1>
+		<div class="mainContainer">
+      <nav class="navbar">
+        <h1 class="logo">
+          <a th:href="@{'/'}"> img<span class="lighter">str</span> </a>
+        </h1>
         <div class="navLinkContainer">
           <a class="navInteraction" href="/categories"> categories </a>
           <a class="navInteraction upload" href="/upload">upload</a>
           <div class="navAuth" sec:authorize="isAuthenticated()">
-            Hello,&nbsp; 
+            Hello,&nbsp;
             <a th:href="@{|user/${#authentication.name}|}">
-            <span sec:authentication="name"></span></a> 
+              <span sec:authentication="name"></span
+            ></a>
             &nbsp;!
             <form th:action="@{/logout}" method="POST">
               <input class="navInteraction" type="submit" value="logout" />
@@ -29,6 +32,7 @@
           </div>
         </div>
       </nav>
+
 			<form th:object=${category} th:action=@{category/save} action="#" method="POST">
 				<div>			
 					<label for="username">Name </label>
@@ -36,7 +40,23 @@
 					<span th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}"></span>
 				</div>
     			<input type=submit value="Save"/>
-			</form>	
+			</form>
+
+      <footer>
+        <div class="footContainer">
+          <div>
+            <p>&#x2615; Anssi Sirkiä 2022</p>
+            <p>Palvelinohjelmointi - SWD4TA020-3010</p>
+          </div>
+          <a href="https://github.com/sirkian/Backend-Harjoitustyo"
+            ><img
+              style="width: 25px"
+              src="../static/icons/mark-github.svg"
+              th:src="@{icons/mark-github.svg}"
+              alt="GitHub icon"
+          /></a>
+        </div>
+      </footer>
 		</div>
 	</body>
 </html>
