--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,20 +6,27 @@
   <head>
     <title>Harjoitustyö</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}" />
+    <link
+      rel="stylesheet"
+      href="../static/css/styles.css"
+      th:href="@{/css/styles.css}"
+    />
   </head>
 
   <body>
     <div class="mainContainer">
       <nav class="navbar">
-        <h1><a th:href="@{'/'}"> imgstr </a></h1>
+        <h1 class="logo">
+          <a th:href="@{'/'}"> img<span class="lighter">str</span> </a>
+        </h1>
         <div class="navLinkContainer">
           <a class="navInteraction" href="/categories"> categories </a>
           <a class="navInteraction upload" href="/upload">upload</a>
           <div class="navAuth" sec:authorize="isAuthenticated()">
-            Hello,&nbsp; 
+            Hello,&nbsp;
             <a th:href="@{|user/${#authentication.name}|}">
-            <span sec:authentication="name"></span></a> 
+              <span sec:authentication="name"></span
+            ></a>
             &nbsp;!
             <form th:action="@{/logout}" method="POST">
               <input class="navInteraction" type="submit" value="logout" />
@@ -31,17 +38,36 @@
           </div>
         </div>
       </nav>
-      
-      <div th:object=${image}>
+
+      <div class="contentContainer">
+        <div class="imagegrid" th:object="${image}">
           <div th:each="image:${images}">
-			<div>
+            <div>
               <a th:href="@{'/images/'+${image.imageId}}">
                 <img
-                  style="width: 100px"
-                  th:src="@{'/download/'+${image.imageId}}"/></a>
-             </div>
+                  th:src="@{'/download/'+${image.imageId}}"
+                  th:alt="${image.imageDesc}"
+              /></a>
+            </div>
           </div>
-       </div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footContainer">
+          <div>
+            <p>&#x2615; Anssi Sirkiä 2022</p>
+            <p>Palvelinohjelmointi - SWD4TA020-3010</p>
+          </div>
+          <a href="https://github.com/sirkian/Backend-Harjoitustyo"
+            ><img
+              style="width: 25px"
+              src="../static/icons/mark-github.svg"
+              th:src="@{icons/mark-github.svg}"
+              alt="GitHub icon"
+          /></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
