--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -6,36 +6,67 @@
   <head>
     <title>Harjoitustyö</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}" />
+    <link
+      rel="stylesheet"
+      href="../static/css/styles.css"
+      th:href="@{/css/styles.css}"
+    />
   </head>
 
   <body>
     <div class="mainContainer">
       <nav class="navbar">
-        <h1><a th:href="@{'/'}"> imgstr </a></h1>
+        <h1 class="logo">
+          <a th:href="@{'/'}"> img<span class="lighter">str</span> </a>
+        </h1>
         <div class="navLinkContainer">
           <a class="navInteraction" href="/categories"> categories </a>
           <a class="navInteraction upload" href="/upload">upload</a>
           <div class="navAuth" sec:authorize="isAuthenticated()">
             Hello,&nbsp;
-            <a th:href="@{|user/${#authentication.name}|}">
-            <span sec:authentication="name"></span></a> &nbsp;!
+            <a th:href="@{|../user/${#authentication.name}|}">
+              <span sec:authentication="name"></span
+            ></a>
+            &nbsp;!
             <form th:action="@{/logout}" method="POST">
               <input class="navInteraction" type="submit" value="logout" />
             </form>
           </div>
           <div class="navAuth" sec:authorize="isAnonymous()">
             <a class="navInteraction" href="/login"> login </a>
+            <a class="navInteraction" href="/signup"> sign up </a>
           </div>
         </div>
       </nav>
-      
-      <div th:object=${category}>
-		<h1 th:text="${category.categoryName}"></h1>
-      	<div th:each="image:${category.images}">
-      		<div><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></div>
-      	</div>
-      	</div>
+
+      <div th:object="${category}">
+        <h1 th:text="${category.categoryName}"></h1>
+        <div th:each="image:${category.images}">
+          <div>
+            <a th:href="@{'/images/'+${image.imageId}}">
+              <img
+                style="width: 100px"
+                th:src="@{'/download/'+${image.imageId}}"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footContainer">
+          <div>
+            <p>&#x2615; Anssi Sirkiä 2022</p>
+            <p>Palvelinohjelmointi - SWD4TA020-3010</p>
+          </div>
+          <a href="https://github.com/sirkian/Backend-Harjoitustyo"
+            ><img
+              style="width: 25px"
+              src="../static/icons/mark-github.svg"
+              th:src="@{icons/mark-github.svg}"
+              alt="GitHub icon"
+          /></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
