--- a/src/main/resources/templates/image.html
+++ b/src/main/resources/templates/image.html
@@ -1,22 +1,76 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<!DOCTYPE html>
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+>
+  <head>
+    <title>Harjoitustyö</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link
+      rel="stylesheet"
+      href="../static/css/styles.css"
+      th:href="@{/css/styles.css}"
+    />
+  </head>
 
-	<head>
-		<title>Harjoitustyö</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	</head>
-	
-	<body>
-		<div>
-			<h1><a th:href="@{'/'}"> imagestore </a></h1>		
-			<div th:object=${image}>
-				<img style="width: 500px" th:src="@{'/download/'+${imageId}}" />
-				<p>Title:&nbsp;<span th:text="${image.imageTitle}"></span></p>
-				<p>Description:&nbsp;<span th:text="${image.imageDesc}"></span></p>
-				<p>Author:&nbsp;<span th:text="${user.username}"></span></p>
-				<a th:href="@{'/download/'+${imageId}}"> Download </a>
-				<p>Likes: &nbsp;<span th:text="${likes}"></span>&nbsp;<a th:href="@{'/like/'+${image.imageId}}"> LIKE </a></p>
-			</div>							
-		</div>
-	</body>
+  <body>
+    <div class="mainContainer">
+      <nav class="navbar">
+        <h1 class="logo">
+          <a th:href="@{'/'}"> img<span class="lighter">str</span> </a>
+        </h1>
+        <div class="navLinkContainer">
+          <a class="navInteraction" href="/categories"> categories </a>
+          <a class="navInteraction upload" href="/upload">upload</a>
+          <div class="navAuth" sec:authorize="isAuthenticated()">
+            Hello,&nbsp;
+            <a th:href="@{|../user/${#authentication.name}|}">
+              <span sec:authentication="name"></span
+            ></a>
+            &nbsp;!
+            <form th:action="@{/logout}" method="POST">
+              <input class="navInteraction" type="submit" value="logout" />
+            </form>
+          </div>
+          <div class="navAuth" sec:authorize="isAnonymous()">
+            <a class="navInteraction" href="/login"> login </a>
+            <a class="navInteraction" href="/signup"> sign up </a>
+          </div>
+        </div>
+      </nav>
+
+      <div class="contentContainer" th:object="${image}">
+      	<div class="image">
+      		<h3 th:text="${image.imageTitle}"></h3>
+	        <img style="width: 800px" th:src="@{'/download/'+${imageId}}" />
+	        <div class="imageDesc">
+		      <div>
+			    <p>Uploaded by:&nbsp;<span th:text="${user.username}"></span></p>
+			    <p class="like"><span class="bolder" th:text="${likes}"></span>&nbsp;<a
+			        th:href="@{'/like/'+${image.imageId}}">
+			        LIKE THIS &#x1F49A; </a></p>
+		      </div>
+			    <p th:text="${image.imageDesc}"></p>
+			    <a class="download" th:href="@{'/download/'+${imageId}}"> DOWNLOAD </a>
+	        </div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footContainer">
+          <div>
+            <p>&#x2615; Anssi Sirkiä 2022</p>
+            <p>Palvelinohjelmointi - SWD4TA020-3010</p>
+          </div>
+          <a href="https://github.com/sirkian/Backend-Harjoitustyo"
+            ><img
+              style="width: 25px"
+              src="../static/icons/mark-github.svg"
+              th:src="@{icons/mark-github.svg}"
+              alt="GitHub icon"
+          /></a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
