--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,11 +4,17 @@
 	<head>
 		<title>Harjoitustyö</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link
+      		rel="stylesheet"
+      		href="../static/css/styles.css"
+      		th:href="@{/css/styles.css}"
+    	/>
 	</head>
 	
 	<body>
-		<div>
-	        <form th:object="${signupform}" th:action="@{/saveuser}" action="#" method="POST">
+		<div class="signupContainer">
+			<h1>Welcome to imgstr!</h1>
+	        <form class="signupForm" th:object="${signupform}" th:action="@{/saveuser}" action="#" method="POST">
 	            <div>
 	            	<input type="text" th:field="*{email}" placeholder="Email"/>
 	            	<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
@@ -25,8 +31,8 @@
 	            	<input type="password" th:field="*{passwordCheck}" placeholder="Confirm password"/>
 	            	<span th:if="${#fields.hasErrors('passwordCheck')}" th:errors="*{passwordCheck}"></span>
 	            </div>
-	            <div><input type="submit" value="Signup"/></div>
-	            <p><a th:href="@{/login}">Login.</a></p>
+	            <div><input class="signupSubmit" type="submit" value="Sign Up"/></div>
+	            <p class="signup-p"><a th:href="@{/login}">Already registered? Login</a></p>
 	        </form>
          </div>
 	</body>
