--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -4,14 +4,43 @@
 	<head>
 		<title>Harjoitustyö</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link
+      rel="stylesheet"
+      href="../static/css/styles.css"
+      th:href="@{/css/styles.css}"
+    />
 	</head>
 	
 	<body>
-		<div>
-			<h1>imagestore</h1>
-			<form th:object=${image} th:action=@{/upload/upload} action="#" method="POST" encType="multipart/form-data">
-				<div>
-					<input type="file" name="image" id="image" accept="image/png, image/gif, image/jpeg" required/>
+		<div class="mainContainer">
+			<nav class="navbar">
+				<h1 class="logo">
+				  <a th:href="@{'/'}"> img<span class="lighter">str</span> </a>
+				</h1>
+				<div class="navLinkContainer">
+				  <a class="navInteraction" href="/categories"> categories </a>
+				  <a class="navInteraction upload" href="/upload">upload</a>
+				  <div class="navAuth" sec:authorize="isAuthenticated()">
+					Hello,&nbsp;
+					<a th:href="@{|user/${#authentication.name}|}">
+					  <span sec:authentication="name"></span
+					></a>
+					&nbsp;!
+					<form th:action="@{/logout}" method="POST">
+					  <input class="navInteraction" type="submit" value="logout" />
+					</form>
+				  </div>
+				  <div class="navAuth" sec:authorize="isAnonymous()">
+					<a class="navInteraction" href="/login"> login </a>
+					<a class="navInteraction" href="/signup"> sign up </a>
+				  </div>
+				</div>
+			  </nav>
+			  
+			  <div class="contentContainer">
+				<form class="contentForm" th:object=${image} th:action=@{/upload/upload} action="#" method="POST" encType="multipart/form-data">
+				
+					<input class="inputFile" type="file" name="image" id="image" accept="image/png, image/gif, image/jpeg" required/>
 					
 					<label for="imageTitle">Title </label>
 					<input type=text id="imageTitle" th:field="*{imageTitle}"/>
@@ -24,11 +53,26 @@
 					<label for="categories">Category</label>
 			 		<select id="categories" th:field="*{category}" >
        					<option th:each="category: ${categories}" th:value="${category.categoryId}" th:text="${category.categoryName}"></option>
-    				</select>
+    				</select>			
+    			<input class="contentFormSubmit" type=submit value="Submit"/>	
+				</form>	
+			</div>
+			
+			<footer>
+				<div class="footContainer">
+				  <div>
+					<p>&#x2615; Anssi Sirkiä 2022</p>
+					<p>Palvelinohjelmointi - SWD4TA020-3010</p>
+				  </div>
+				  <a href="https://github.com/sirkian/Backend-Harjoitustyo"
+					><img
+					  style="width: 25px"
+					  src="../static/icons/mark-github.svg"
+					  th:src="@{icons/mark-github.svg}"
+					  alt="GitHub icon"
+				  /></a>
 				</div>
-    			<input type=submit value="Submit"/>
-			</form>	
-			<a href="/images">Browse images</a>
+			  </footer>
 		</div>
 	</body>
 </html>
