--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
           </div>
           <a href="https://github.com/sirkian/Backend-Harjoitustyo"
             ><img
-              style="width: 25px"
+              style="width: 25px; height: 25px"
               src="../static/icons/mark-github.svg"
               th:src="@{icons/mark-github.svg}"
               alt="GitHub icon"
