--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 	            <div> 
 	            	<input type="password" name="password" placeholder="Password"/>
 	            </div>
-	            <span th:if="${param.error}"> Invalid username and password. </span>
+	            <span style="color: #FFF" th:if="${param.error}"> Invalid username and password. </span>
 	            <div>
 	            	<input class="signupSubmit" type="submit" value="Sign In"/>
 	            </div>
