--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -54,7 +54,7 @@
 			 		<select id="categories" th:field="*{category}" >
        					<option th:each="category: ${categories}" th:value="${category.categoryId}" th:text="${category.categoryName}"></option>
     				</select>			
-    			<input class="contentFormSubmit" type=submit value="Submit"/>	
+    			<input class="contentFormSubmit" type=submit value="Upload"/>	
 				</form>	
 			</div>
 			
